--- a/src/view/components/Highlighter.css
+++ b/src/view/components/Highlighter.css
@@ -5,6 +5,7 @@
 	text-align: center;
 	position: absolute;
 	pointer-events: none;
+	z-index: 999999;
 }
 
 .content {
@@ -48,6 +49,7 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
+	border: 0.0625rem solid var(--color-highlight-bd);
 }
 
 .fixed {
